WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276288
Fix css/css-flexbox/flex-item-compressible-002.html (#2 and #7)
https://bugs.webkit.org/show_bug.cgi?id=276288
Summary
Fix css/css-flexbox/flex-item-compressible-002.html (#2 and #7)
alan
Reported
2024-07-06 10:49:43 PDT
ssia
Attachments
Patch
(2.69 KB, patch)
2024-07-06 10:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(2.69 KB, patch)
2024-07-06 19:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-07-06 10:52:20 PDT
Created
attachment 471824
[details]
Patch
alan
Comment 2
2024-07-06 19:22:07 PDT
Created
attachment 471827
[details]
[fast-cq]Patch
EWS
Comment 3
2024-07-07 05:14:11 PDT
Committed
280718@main
(85dbff912fa9): <
https://commits.webkit.org/280718@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471827
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-07-07 05:15:14 PDT
<
rdar://problem/131258088
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug